fixed horizontal scrollbar, minor column fix in DisplayAlbum

--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,23 @@
 @tailwind utilities; 
 
 ::-webkit-scrollbar {
-  height: 8px;
-  background: transparent; 
+  width: 10px;
+  height: 10px;
 }
 
-::-webkit-scrollbar-thumb {
-  background: #535353;
+::-webkit-scrollbar-track {
+  background: transparent;
   border-radius: 10px;
 }
 
+::-webkit-scrollbar-thumb {
+  background: #a7a7a7; 
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: padding-box;
+}
+
 ::-webkit-scrollbar-thumb:hover {
-  background: #b3b3b3;
+  background: #ffffff;
+  background-clip: padding-box;
 }
